[package]
name = "pol-indexer"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Your Name <you@example.com>"]
description = "Real-time Polygon POL net-flow indexer to Binance addresses"
repository = ""

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
once_cell = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
time = { version = "0.3", features = ["macros", "serde-well-known"] }

# Web server
axum = "0.7"
tower = "0.5"
tokio-stream = "0.1"

# EVM / Polygon
ethers = { version = "2", features = ["ws", "rustls"] }
alloy-primitives = "0.8"

# For graceful shutdown
anyhow = "1"
